@@ -1,3 +1,8 @@
+1999-08-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* directory.m (swarm_directory_ensure_selector): Add types to
+	error message.
+
 1999-08-08  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>
 
 	* directory.m: Declare alloca.
